--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Laboratorio List views and adapters</string>
+    <string name="app_name">StarbuzzApp</string>
 </resources>
